# pttbbs

./: .cvsignore  .gitattributes  .gitignore  BUILD.bazel  CMakeLists.txt  Dockerfile  INSTALL.cmake.md  Makefile  Makefile.test  README  UPDATING  WORKSPACE.bazel  bazel.mk  kimcartoon  pttbbs.cmake  pttbbs.mk  pttbbs_cond.mk  pttbbs_mbbsd.mk  pttbbs_test.mk
bank/: Makefile  bank.h  bankstuff.c  client.c  money.c  server.c  spec
blog/: INSTALL  blog.pl  builddb.pl  index.pl
build_tools/: func.bzl  vars.bzl
cacheserver/: Makefile  README  authserver.c  friend.cpp  utmpserver.c  utmpserver2.c  utmpserver3.c  utmpsync.c
common/: CMakeLists.txt  Makefile
common/bbs/: BUILD.bazel  CMakeLists.txt  Makefile  banip.c  cache.c  fhdr_stamp.c  file.c  filehdr.c  log.c  money.c  names.c  passwd.c  path.c  search.c  string.c  time.c
common/fbs/: .gitignore  BUILD.bazel  Makefile  register_sms.fbs  verifydb.fbs
common/osdep/: BUILD.bazel  CMakeLists.txt  Makefile  cpuload.c  memusage.c  proctitle.c  strlcat.c  strlcpy.c
common/sys/: BUILD.bazel  CMakeLists.txt  Makefile  big5_gen.py  big5data.tar.bz2  buffer.c  crypt.c  daemon.c  file.c  lock.c  log.c  net.c  osdep.c  record.c  sort.c  string.c  telnet.c  thttp.c  time.c  utf8.c  vbuf.c  vector.c  vtkbd.c
daemon/: Makefile
data_test/: banip.conf
dockerfiles/: Dockerfile.default  Dockerfile.test
docs/: ADVANCE  ANCESTOR  DONATE  FAQ  INSTALL  INSTALL.en.md  (+16 more)
include/: .cvsignore  BUILD.bazel  ansi.h  assess.h  bbs.h  buffer.h  chc.h  chess.h  cmbbs.h  cmdiet.h  cmmigrate_pttdb.h  cmpttdb.h  cmpttlib.h  cmpttui.h  cmsys.h  cmutil_time.h  common.h  config.h  convert.h  daemons.h  email_challenge.hpp  fav.h  fnv_hash.h  fpg.h  gomo.h  grayout.h  libbbsutil.h  logind.h  modes.h  osdep.h  passwd_notify.hpp  perm.h  proto.h  psb.h  ptt_const.h  pttbbs.conf  pttconst.h  pttdb.h  pttdb_comment.h  pttdb_comment_private.h  (+27 more)
include/cmmigrate_pttdb/: migrate_file_to_pttdb.h  migrate_file_to_pttdb_private.h  migrate_pttdb_to_file.h  migrate_pttdb_to_file_private.h  parse_legacy_file_comment_create_milli_timestamp_reset_karma.h
include/cmpttdb/: pttdb_comment.h  pttdb_comment_private.h  pttdb_comment_reply.h  pttdb_comment_reply_private.h  pttdb_const.h  pttdb_content_block.h  pttdb_content_block_private.h  pttdb_dict_bson_by_uu.h  pttdb_dict_bson_by_uu_private.h  pttdb_dict_idx_by_uu.h  pttdb_dict_idx_by_uu_private.h  pttdb_file.h  pttdb_file_info.h  pttdb_file_info_private.h  pttdb_file_private.h  pttdb_main.h  pttdb_main_private.h  pttdb_util.h  pttdb_uuid.h  pttdb_uuid_private.h  util_db.h  util_db_private.h  util_timestamp.h
include/cmpttlib/: ptt_link_list.h  ptt_queue.h  pttlib_util.h  util_time.h  util_time_private.h
include/cmpttui/: pttui_buffer.h  pttui_buffer_private.h  pttui_const.h  pttui_id_comment_id_dict.h  pttui_lua_bbs.h  pttui_resource_dict.h  pttui_resource_dict_private.h  pttui_resource_info.h  pttui_state.h  pttui_thread.h  pttui_thread_lock.h  pttui_thread_lock_private.h  pttui_thread_private.h  pttui_util.h  pttui_var.h  vedit3.h  vedit3_action.h  vedit3_action_private.h  vedit3_private.h
include/cmutil_time/: util_timestamp.h
include/pttconst/: pttbool.h  ptterr.h  pttgcc.h
mbbsd/: .cvsignore  BUILD.bazel  CMakeLists.txt  Makefile  acl.c  admin.c  aids.c  alloc.c  angel.c  announce.c  args.c  assess.c  bbcall.c  bbs.c  bbslua.c  bbsluaext.c  board.c  brc.c  cache.c  cal.c  calendar.c  captcha.c  card.c  ccw.c  ch_conn6.c  ch_dark.c  ch_go.c  ch_gomo.c  ch_reversi.c  chat.c  chc.c  chc_draw.c  chc_log.c  chc_net.c  chc_play.c  chc_rule.c  chc_tab.c  chess.c  chicken.c  comments.c  (+75 more)
mbbsd_test/: BUILD.bazel  acl_test.cc  acl_test.h  acl_test1.cc  acl_test2.cc  acl_test3.cc  acl_test4.cc  fav_test.cc  register_test.cc
mbbsd_test/acl_test/: BUILD.bazel  acl_test.h  acl_test1.cc  acl_test3.cc  acl_test4.cc
mbbsd_test/admin_test/: BUILD.bazel  admin_test.h  admin_test1.cc  admin_test10.cc  admin_test11.cc  admin_test12.cc  admin_test13.cc  admin_test14.cc  admin_test15.cc  admin_test16.cc  admin_test2.cc  admin_test3.cc  admin_test4.cc  admin_test5.cc  admin_test6.cc  admin_test7.cc  admin_test8.cc  admin_test9.cc
mbbsd_test/recover_test/: BUILD.bazel  recover_test.h  recover_test1.cc
mbbsd_test/register_test/: BUILD.bazel  register_test.h  register_test1.cc  register_test10.cc  register_test11.cc  register_test12.cc  register_test14.cc  register_test2.cc  register_test3.cc  register_test34.cc  register_test35.cc  register_test36.cc  register_test4.cc  register_test5.cc  register_test6.cc  register_test7.cc  register_test8.cc
mbbsd_test/user_test/: BUILD.bazel  user_test.h  user_test1.cc  user_test10.cc  user_test11.cc  user_test12.cc  user_test13.cc  user_test14.cc  user_test15.cc  user_test16.cc  user_test17.cc  user_test2.cc  user_test3.cc  user_test4.cc  user_test5.cc  user_test6.cc  user_test7.cc  user_test8.cc  user_test9.cc
mbbsd_test/verifydb_test/: BUILD.bazel  verifydb_test.h  verifydb_test1.cc  verifydb_test2.cc  verifydb_test3.cc  verifydb_test4.cc  verifydb_test5.cc  verifydb_test6.cc
tests/test_mbbsd/: CMakeLists.txt  Makefile  mbbsd_mock.c  test_bbs.cc  test_dummy.cc  test_pttdb.cc  test_pttdb_comment.cc  test_pttdb_comment_reply.cc  test_pttdb_content_block.cc  test_pttdb_main.cc  test_pttdb_misc.cc  test_util_db.cc
testutil/: BUILD.bazel  check_SHM.c  load_uhash.c  mbbsd_s.c  mbbsd_s.h  mock_getrandom.c  mock_io.c  reset_SHM.c  setup_root_link.c  testmock.h  testmocksysrandom.h  testutil.h
util/: .cvsignore  .gitignore  BBSFileHeader.pm  BM_money.c  BUILD.bazel  CMakeLists.txt  Makefile  account.c  angel.c  antispam.c  backpasswd.sh  banip.pl  bbsctl.c  bbsenv.pl  bbsmail.c  bbsrf.c  birth.c  boardlist.c  broadcast.c  buildAnnounce.c  buildAnnounce.sh  buildir.c  buildir2.cc  checkdir.c  checkmoney.c  chesscountry.c  chkhbf.c  cleancontactemail.c  cleandir.pl  cleanident.c  cleanpasswd.c  cleanshm.c  countalldice.c  dailybackup.pl  deluserfile.c  descrypt.c  diskstat.c  expire.c  filtermail.pl  gamble_fix.c  (+77 more)
util/pyutil/: big5.py  big5_gen.py  pttpost.py  pttstruct.py
(+991 files in other folders)
