load("//:build_tools/vars.bzl", "LUACFLAGS", "LUALIBS", "PTT_WARN")

cc_library(
    name = "acl_test_h",
    hdrs = ["acl_test.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "acl_test",
    srcs = [
        "acl_test.cc",
    ],
    tags = [
        "exclusive",
    ],
    visibility = ["//visibility:public"],
    linkstatic = True,
    data = [
        "//testcase:testcase",
    ],
    copts = PTT_WARN + [
        "-Iinclude",
        "-I$(BINDIR)/include",
        "-I$(BINDIR)/common/fbs",
        LUACFLAGS,

        # "-Qunused-arguments",
        "-Wno-parentheses-equality",
        # "-fcolor-diagnostics",
        "-Wno-invalid-source-encoding",

        "-Itestutil",
    ],
    linkopts = [
        "-Os",
        "-Wl,--as-needed",
        "-Wl,--sort-common",

        LUALIBS,

        "-lstdc++",
        "-lncurses",
    ],
    deps = [
        "acl_test_h",

        "//testutil:testutil",
        "//mbbsd:mockmbbsdlib",
        "//mbbsd:mbbsdcxx",
        "@com_google_googletest//:gtest_main",
    ],
    defines = [
        "BBSHOME='\"$(BBSHOME)\"'",
    ],
)

cc_test(
    name = "acl_test1",
    srcs = [
        "acl_test1.cc",
    ],
    tags = [
        "exclusive",
    ],
    visibility = ["//visibility:public"],
    linkstatic = True,
    data = [
        "//testcase:testcase",
    ],
    copts = PTT_WARN + [
        "-Iinclude",
        "-I$(BINDIR)/include",
        "-I$(BINDIR)/common/fbs",
        LUACFLAGS,

        # "-Qunused-arguments",
        "-Wno-parentheses-equality",
        # "-fcolor-diagnostics",
        "-Wno-invalid-source-encoding",

        "-Itestutil",
    ],
    linkopts = [
        "-Os",
        "-Wl,--as-needed",
        "-Wl,--sort-common",

        LUALIBS,

        "-lstdc++",
        "-lncurses",
    ],
    deps = [
        "acl_test_h",

        "//testutil:testutil",
        "//mbbsd:mockmbbsdlib",
        "//mbbsd:mbbsdcxx",
        "@com_google_googletest//:gtest_main",
    ],
    defines = [
        "BBSHOME='\"$(BBSHOME)\"'",
    ],
)

cc_test(
    name = "acl_test2",
    srcs = [
        "acl_test2.cc",
    ],
    tags = [
        "exclusive",
    ],
    visibility = ["//visibility:public"],
    linkstatic = True,
    data = [
        "//testcase:testcase",
    ],
    copts = PTT_WARN + [
        "-Iinclude",
        "-I$(BINDIR)/include",
        "-I$(BINDIR)/common/fbs",
        LUACFLAGS,

        # "-Qunused-arguments",
        "-Wno-parentheses-equality",
        # "-fcolor-diagnostics",
        "-Wno-invalid-source-encoding",

        "-Itestutil",
    ],
    linkopts = [
        "-Os",
        "-Wl,--as-needed",
        "-Wl,--sort-common",

        LUALIBS,

        "-lstdc++",
        "-lncurses",
    ],
    deps = [
        "acl_test_h",

        "//testutil:testutil",
        "//mbbsd:mockmbbsdlib",
        "//mbbsd:mbbsdcxx",
        "@com_google_googletest//:gtest_main",
    ],
    defines = [
        "BBSHOME='\"$(BBSHOME)\"'",
    ],
)

cc_test(
    name = "acl_test3",
    srcs = [
        "acl_test3.cc",
    ],
    tags = [
        "exclusive",
    ],
    visibility = ["//visibility:public"],
    linkstatic = True,
    data = [
        "//testcase:testcase",
    ],
    copts = PTT_WARN + [
        "-Iinclude",
        "-I$(BINDIR)/include",
        "-I$(BINDIR)/common/fbs",
        LUACFLAGS,

        # "-Qunused-arguments",
        "-Wno-parentheses-equality",
        # "-fcolor-diagnostics",
        "-Wno-invalid-source-encoding",

        "-Itestutil",
    ],
    linkopts = [
        "-Os",
        "-Wl,--as-needed",
        "-Wl,--sort-common",

        LUALIBS,

        "-lstdc++",
        "-lncurses",
    ],
    deps = [
        "acl_test_h",

        "//testutil:testutil",
        "//mbbsd:mockmbbsdlib",
        "//mbbsd:mbbsdcxx",
        "@com_google_googletest//:gtest_main",
    ],
    defines = [
        "BBSHOME='\"$(BBSHOME)\"'",
    ],
)

cc_test(
    name = "acl_test4",
    srcs = [
        "acl_test4.cc",
    ],
    tags = [
        "exclusive",
    ],
    visibility = ["//visibility:public"],
    linkstatic = True,
    data = [
        "//testcase:testcase",
    ],
    copts = PTT_WARN + [
        "-Iinclude",
        "-I$(BINDIR)/include",
        "-I$(BINDIR)/common/fbs",
        LUACFLAGS,

        # "-Qunused-arguments",
        "-Wno-parentheses-equality",
        # "-fcolor-diagnostics",
        "-Wno-invalid-source-encoding",

        "-Itestutil",
    ],
    linkopts = [
        "-Os",
        "-Wl,--as-needed",
        "-Wl,--sort-common",

        LUALIBS,

        "-lstdc++",
        "-lncurses",
    ],
    deps = [
        "acl_test_h",

        "//testutil:testutil",
        "//mbbsd:mockmbbsdlib",
        "//mbbsd:mbbsdcxx",
        "@com_google_googletest//:gtest_main",
    ],
    defines = [
        "BBSHOME='\"$(BBSHOME)\"'",
    ],
)

cc_test(
    name = "fav_test",
    size = "small",
    srcs = [
        "fav_test.cc",
    ],
    tags = [
        "exclusive",
    ],
    visibility = ["//visibility:public"],
    linkstatic = True,
    data = [
        "//testcase:testcase",
    ],
    copts = PTT_WARN + [
        "-Iinclude",
        "-I$(BINDIR)/include",
        "-I$(BINDIR)/common/fbs",
        LUACFLAGS,

        # "-Qunused-arguments",
        "-Wno-parentheses-equality",
        # "-fcolor-diagnostics",
        "-Wno-invalid-source-encoding",

        "-Itestutil",
    ],
    linkopts = [
        "-Os",
        "-Wl,--as-needed",
        "-Wl,--sort-common",

        LUALIBS,

        "-lstdc++",
        "-lncurses",
    ],
    deps = [
        "//testutil:testutil",
        "//mbbsd:mockmbbsdlib",
        "//mbbsd:mbbsdcxx",
        "@com_google_googletest//:gtest_main",
    ],
    defines = [
        "BBSHOME='\"$(BBSHOME)\"'",
    ],
)

cc_test(
    name = "register_test",
    srcs = [
        "register_test.cc",
    ],
    tags = [
        "exclusive",
    ],
    visibility = ["//visibility:public"],
    linkstatic = True,
    data = [
        "//testcase:testcase",
    ],
    copts = PTT_WARN + [
        "-Iinclude",
        "-I$(BINDIR)/include",
        "-I$(BINDIR)/common/fbs",
        LUACFLAGS,

        # "-Qunused-arguments",
        "-Wno-parentheses-equality",
        # "-fcolor-diagnostics",
        "-Wno-invalid-source-encoding",

        "-Itestutil",
    ],
    linkopts = [
        "-Os",
        "-Wl,--as-needed",
        "-Wl,--sort-common",

        LUALIBS,

        "-lstdc++",
        "-lncurses",
    ],
    deps = [
        "//testutil:testutil",
        "//mbbsd:mockmbbsdlib",
        "//mbbsd:mbbsdcxx",
        "@com_google_googletest//:gtest_main",
    ],
    defines = [
        "BBSHOME='\"$(BBSHOME)\"'",
    ],
)
