load("//:build_tools/vars.bzl", "PTT_WARN")

SRCS = [
    "log.c",
    "money.c",
    "names.c",
    "path.c",
    "time.c",
    "string.c",
    "fhdr_stamp.c",
    "cache.c",
    "passwd.c",
    "filehdr.c",
    "banip.c",
    "search.c",
]

cc_library(
    name = "commonbbs",
    srcs = SRCS,
    linkstatic = True,
    copts = PTT_WARN + [
        "-Iinclude",
        "-Ibazel-out/k8-fastbuild/bin/include",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//include:all",
        "//:pttbbsconf",
        "//common/sys:commonsys",
    ],
    defines = [
        "BBSHOME='\"$(BBSHOME)\"'",
    ],
)
