load("//:build_tools/vars.bzl", "PTT_WARN")

SRCS = [
    "cpuload.c",
    "proctitle.c",
    "strlcat.c",
    "strlcpy.c",
    "memusage.c",
]

cc_library(
    name = "commonosdep",
    srcs = SRCS,
    linkstatic = True,
    copts = PTT_WARN + [
        "-Iinclude",
        "-I$(BINDIR)/include",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//include:all",
        "//:pttbbsconf",
    ],
    defines = [
        "BBSHOME='\"$(BBSHOME)\"'",
    ],
)
