load("//:build_tools/vars.bzl", "LUACFLAGS", "LUALIBS", "PTT_WARN")

TAGS = [
    "exclusive",
]

VISIBILITY = [
    "//visibility:public",
]

DATA = [
    "//testcase:testcase",
]

COPTS = PTT_WARN + [
    "-pipe",
    "-Iinclude",
    "-I$(BINDIR)/include",
    "-I$(BINDIR)/common/fbs",
    LUACFLAGS,

    # "-Qunused-arguments",
    "-Wno-parentheses-equality",
    # "-fcolor-diagnostics",
    "-Wno-invalid-source-encoding",

    "-Itestutil",
    "-Imbbsd",
    "-std=c++17",
]

LINKOPTS = [
    "-Os",
    "-Wl,--as-needed",
    "-Wl,--sort-common",

    LUALIBS,

    "-lstdc++",
    "-lncurses",
]

DEPS = [
    "//testutil:testutil",
    "//mbbsd:mockmbbsdlib",
    "//mbbsd:mbbsdcxx",
    "@com_google_googletest//:gtest_main",

    "acl_test_h",
]

DEFINES = [
    "BBSHOME='\"$(BBSHOME)\"'",
    "BAZELTEST=",
]

cc_library(
    name = "acl_test_h",
    hdrs = ["acl_test.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "acl_test",
    srcs = [
        "acl_test.cc",
    ],
    tags = TAGS,
    visibility = VISIBILITY,
    linkstatic = True,
    data = DATA,
    copts = COPTS,
    linkopts = LINKOPTS,
    deps = DEPS,
    defines = DEFINES,
)

cc_test(
    name = "acl_test1",
    srcs = [
        "acl_test1.cc",
    ],
    tags = TAGS,
    visibility = VISIBILITY,
    linkstatic = True,
    data = DATA,
    copts = COPTS,
    linkopts = LINKOPTS,
    deps = DEPS,
    defines = DEFINES,
)

cc_test(
    name = "acl_test2",
    srcs = [
        "acl_test2.cc",
    ],
    tags = TAGS,
    visibility = VISIBILITY,
    linkstatic = True,
    data = DATA,
    copts = COPTS,
    linkopts = LINKOPTS,
    deps = DEPS,
    defines = DEFINES,
)

cc_test(
    name = "acl_test3",
    srcs = [
        "acl_test3.cc",
    ],
    tags = TAGS,
    visibility = VISIBILITY,
    linkstatic = True,
    data = DATA,
    copts = COPTS,
    linkopts = LINKOPTS,
    deps = DEPS,
    defines = DEFINES,
)

cc_test(
    name = "acl_test4",
    srcs = [
        "acl_test4.cc",
    ],
    tags = TAGS,
    visibility = VISIBILITY,
    linkstatic = True,
    data = DATA,
    copts = COPTS,
    linkopts = LINKOPTS,
    deps = DEPS,
    defines = DEFINES,
)
